--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,12 +25,15 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      # Pipenv
+      - name: Install pipenv
+        run: pip install pipenv
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      # Install Dependencies
+      - name: Install dev and build dependencies
+        run: pipenv install --dev
+
+      - name: Run main.py
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          cd src/
+          pipenv run python3 main.py
