--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
 
       # Pipenv
       - name: Install pipenv
-        run: pip install pipenv
+        run: python -m pip install --upgrade pipenv
 
       # Install Dependencies
       - name: Install dev and build dependencies
