--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,9 +34,13 @@ jobs:
       - name: Install pipenv
         run: python -m pip install --upgrade pipenv
 
+      # Create requirements.txt
+      - name: Create requirements.txt
+        run: pipenv lock -r > requirements.txt
+
       # Install Dependencies
       - name: Install dev and build dependencies
-        run: pipenv install --dev
+        run: pip install -r requirements.txt
 
       - name: Run main.py
         run: |
