add nbqa shell flag

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,7 +54,7 @@ jobs:
           args: python -m pip install matplotlib pandas scikit-learn ; pylint src
 
       - name: Check linting of .ipynb files
-        run: nbqa pylint src --fail-under=5
+        run: nbqa pylint src --fail-under=5 --nbqa-shell
 
   formatting:
     runs-on: ubuntu-latest
